Add Kokoro JS TTS support with model download script
- Add Kokoro JS as primary TTS provider (local, no API keys)
- Create download-kokoro-models.js for on-demand model fetching
- Update .gitignore to exclude model files from git
- Update generate-audio.js with Kokoro integration
- Update README with Kokoro quickstart and setup instructions
- Update package.json with kokoro-js as optional dependency

Models are downloaded separately so they don't bloat the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ dist/
 .turbo
 build/
 coverage/
+
+# Model files — too large for git, download separately
+models/
+*.onnx
+*.pth
+*.pt
+*.weights
+*.safetensors
+*.bin
