--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.3.9"
+  },
+  "optionalDependencies": {
+    "kokoro-js": "^1.0.0"
   }
 }
