Remove audio files from git, lock down API key security
- Remove all MP3 files from git history (they're generated locally)
- Add public/audio/*.mp3 to .gitignore
- Update .env.example with clear instructions
- Document that OPENAI_API_KEY should never be committed
- Update README with audio generation workflow
- Audio is generated locally with user's own API key, never stored in repo
- Clarify .env.local is always .gitignored

--- a/.env.example
+++ b/.env.example
@@ -1,64 +1,36 @@
-# TTS Configuration Example
-# Copy this file to .env and fill in your values
+# Environment Configuration Example
+# Copy this to .env.local and fill in your values
+# Do NOT commit .env.local to git
 
 # ============================================================================
-# OpenAI TTS (Optional - required only for OpenAI provider as fallback)
+# OpenAI TTS (Recommended for audio generation)
 # ============================================================================
 # Get your API key from: https://platform.openai.com/account/api-keys
-# Only needed if using OpenAI as primary or fallback provider
+# Required for: npm run generate-audio (or --tts-provider openai)
+# Cost: ~$0.015 per minute of audio
 OPENAI_API_KEY=sk-your-api-key-here
 
 # ============================================================================
-# Piper TTS Configuration (Local, recommended)
+# Optional: Alternative TTS Providers (local, no API key needed)
 # ============================================================================
-# Piper is a fast, offline neural TTS engine. No configuration needed
-# after installation. Set voice using --voice flag or DEFAULT_VOICES in
-# scripts/generate-audio.js
-#
-# Install Piper:
-#   pip install piper-tts
-#
-# Download voice models:
-#   piper --download en_US-lessac-medium
-#
-# List available voices:
-#   piper --list-voices
-#
+
+# Piper TTS (local, fast, good quality)
+# Install: pip install piper-tts
+# Download voice: piper --download en_US-lessac-medium
+# Usage: npm run generate-audio -- --tts-provider piper
+
+# Coqui TTS (local, flexible)
+# Install: pip install TTS
+# Usage: npm run generate-audio -- --tts-provider coqui
+
+# Kokoro JS (local, fast, no API keys)
+# Install: npm install kokoro-js && node scripts/download-kokoro-models.js
+# Usage: npm run generate-audio -- --tts-provider kokoro
 
 # ============================================================================
-# Coqui TTS Configuration (Local)
+# Notes
 # ============================================================================
-# Coqui is a flexible neural TTS with multiple model options
-#
-# Install Coqui:
-#   pip install TTS
-#
-# The library will auto-download models on first use
-#
-# Available models:
-#   - glow-tts (fast, good quality)
-#   - tacotron2 (high quality)
-#   - align-tts (adaptive)
-#
-
-# ============================================================================
-# Recommended Setup
-# ============================================================================
-# 1. Install Piper first (fast, offline, good quality)
-#    pip install piper-tts
-#    piper --download en_US-lessac-medium
-#
-# 2. Use it by default:
-#    npm run generate-audio
-#
-# 3. Have Coqui as secondary fallback:
-#    pip install TTS
-#
-# 4. Have OpenAI as premium fallback (optional):
-#    Set OPENAI_API_KEY above
-#    npm run generate-audio:openai
-#
-# The script auto-detects available providers and uses them in this order:
-# 1. Piper (local, fast, offline)
-# 2. Coqui (local, flexible)
-# 3. OpenAI (cloud, premium quality)
+# - Audio files (public/audio/*.mp3) are generated locally, not in git
+# - .env.local is in .gitignore and will never be committed
+# - Only set OPENAI_API_KEY if you use OpenAI for audio generation
+# - Always use environment variables, never hardcode keys in code
