Commit OpenAI-generated audio files for the presentation
- Add individual slide MP3 files (slide-1.mp3 through slide-11.mp3)
- These are OpenAI-generated audio, best quality
- Keep concatenated herold-presentation.mp3 out of git
- .env.local and API keys remain secure and never committed
- Audio won't need to be regenerated on each clone/deploy

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ models/
 *.safetensors
 *.bin
 
-# Audio files — generated locally with API keys, never committed
-public/audio/*.mp3
+# Concatenated audio file (generated locally for reference)
+public/audio/herold-presentation.mp3
 concat.txt
 .vercel
 .vercel
